--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
-    <!DOCTYPE html>  
-    <html>  
-    <body>  
-    <h1>Welcome to my Blog!。</h1>  
-    </body>  
-    </html>  
+   <!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>html5</title>
+    <style type="text/css">
+    .theme{
+      display: block;
+      width: 200px;
+      font-size: 30px;
+      margin: 100px auto;
+    }
+    </style>
+</head>
+<body>
+<div class="theme">
+  Hello, world.
+</div>
+
+</body>
+</html>
