--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>html5</title>
+    <title>failymao</title>
     <style type="text/css">
     .theme{
       display: block;
-      width: 200px;
+      width: 600px;
       font-size: 30px;
       margin: 100px auto;
     }
